# julyprison

./: README.md  toggle_switches.py
qt_switches/: CMakeLists.txt  ToggleSwitches  compile.sh  main.cpp
